2009-06-26  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

Reviewed by Darin Adler.

        "Pointer to incomplete class type is not allowed" error with RVCT
        https://bugs.webkit.org/show_bug.cgi?id=26721

        Based on Norbert Leser's work.

        * dom/Document.cpp:
        (WebCore::Document::setFocusedNode):
        * dom/Node.cpp:
        (WebCore::Node::dispatchMouseEvent):
        * dom/Node.h: Remove the default value for PassRefPtr<Event> args,
        to eliminate dependency on the Event class definition

Canonical link: https://commits.webkit.org/36939@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45251 268f45cc-cd09-0410-ab3c-d52691b4dbfc